<resources>
    <string name="app_name">SHM Study</string>

    <!--Activity Strings-->
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="me">Me</string>
    <string name="inspiration">Inspire</string>
    <string name="studies">Studies</string>

    <!-- Fragment Strings -->
    <string name="tuesday_studies">Tuesday</string>
    <string name="sunday_studies">Sunday</string>
    <string name="sermons">Sermons</string>

    <!--Other Strings-->
    <string name="about">About</string>
    <string name="comments">Comments</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="bibles">Bibles</string>
    <string name="search">Search</string>


</resources>
